# routes/vpn.router.go
@@ -9,7 +9,8 @@ import (
 var vpnController = &controllers.VpnController{}
 
 func VpnInit(g *echo.Group) {
-	g.GET("/crawl", vpnController.CrawlVpn)
+	g.GET("/vpngate/crawl", vpnController.CrawlVpngate)
+	g.GET("/vpngate/crawl/toggle", vpnController.CrawlVpngate)
 	g.GET("/get-all", vpnController.GetAll)
 	g.GET("/:name/download", vpnController.Download)
 }
